Fix group spacing

--- a/src/assets/styles/cmps/_board-filter.scss
+++ b/src/assets/styles/cmps/_board-filter.scss
@@ -1,7 +1,7 @@
 .board-filter {
     margin-top: em(8px);
     margin-left: em(6px);
-
+    margin-bottom: em(16px);
     // display: grid;
     // position: relative;
     // height: 173px; 
