--- a/src/assets/styles/cmps/_group-list.scss
+++ b/src/assets/styles/cmps/_group-list.scss
@@ -28,7 +28,8 @@
         font-size: 1.125em;
         margin-right: 7px;
     }
-    .group-header{
+
+    .group-header {
         display: grid;
         position: relative;
         right: 1.8em;
@@ -36,14 +37,22 @@
         justify-content: start;
         align-items: center;
         color: $clr-label-3;
+
+        .elementTypeH3_ca3a1ab6a4.sizeLarge_c730ce20f8  {
+            font-family: poppins-medium;
+            font-size: 18px !important;
+        }
     }
+
     .group-header button {
         opacity: 0;
         transition: 0.3s;
     }
-    .group-header:hover button{
+
+    .group-header:hover button {
         opacity: 1;
     }
+
     .dyn-cell.checkbox-header-container {
         display: grid;
         justify-items: center;
